---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2024-11-24
  Bugfixes:
    - Burner inserters are now craftable without technology as intended
    - Satellites now give the correct launch products
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2024-11-23
  Major Features:
    - Updated to Factorio 2.0.
  Bugfixes:
    - Steel plate technology now correctly requires the coal coke and automation science pack technologies.
  Balancing:
    - Automation science pack now requires 2 glass, instead of 3
    - Increased the crafting speeed of sand by 50%
    - Furnaces now require the previous tier of furnace to craft
    - Waste water purification is now more useful to do (rather than just throwing out the water)
  Known Issues:
    - Simulation saves don't work.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2023-11-09
  Changes:
    - Fixed a small bug where electronics research unlocked the circuit recipe twice.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2023-11-09
  Changes:
    - Split off burner phase as its own mod.
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2023-11-07
  Changes:
    - Soul-Burn's Janky Quality support.
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2023-11-07
  Changes: